package behavioral.observer.console;

public interface IClickListener {
    void listen();
}
