@startuml
'https://plantuml.com/class-diagram

' Subject
class Button {
    + void addEvent(T t)
    + void addListener(IButtonListener listener)
}

interface IClickListener {
    + void listen()
}

' Observer
class Activity {
}

Button --> IClickListener : "click"
Activity ..|> IClickListener
Activity --> Button : "onpress"

@enduml